                _              __            _   _
       _ __ ___| |_ _ __ ___  / _| ___  _ __| |_| |__
      | '__/ _ \ __| '__/ _ \| |_ / _ \| '__| __| '_ \
      | | |  __/ |_| | | (_) |  _| (_) | |  | |_| | | |
      |_|  \___|\__|_|  \___/|_|  \___/|_|   \__|_| |_|

            RetroForth & nga 2024.9 Release Notes

================================================================

- general

  - added takawiri, a new listener

- toolchain

- documentation

- examples

  - add ilo.retro

- image

  - `HOME` (in the library code) is now a floating buffer
    above `here`
  - `s:get-word` was not properly breaking on space; this is
    now corrected
  - `n:put` no longer uses temporary string buffers

- library

  - added "tob", a text output buffer
  - added "c:get/ext", for reading keys and returning unique
    codes for arrows

- retro-compiler

- new nga implementations

  - nga-zig

    - added a zig implementation from iacore under vm/libnga-zig
    - build with: zig build -Doptimize=ReleaseFast -p ~/.local

- nga-c

  - use UTF32 internally (translating to/from UTF8 externally)
  - filesystem device no longer included if ENABLE_FILES not
    defined
  - formatting cleanups
  - added ioctl device
  - new "-p" option to run non-Unu format source files
  - now report "<none>" for `script:name` if no file is being
    run
  - now report 0 for `script:arguments` if not running a program

Future Notes

================================================================